<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="@string/preferences_goto_td_key"
        android:title="@string/preferences_goto_td_title" />

    <Preference
        android:key="@string/preferences_rate_key"
        android:title="@string/preferences_rate_title" />

    <com.jmartin.thedevelopment.android.preferences.InfoDialog
        android:title="@string/preferences_attributions_title"
        android:dialogMessage="@string/preferences_attributions_message"
        android:dialogTitle="@string/preferences_attributions_title" />

    <com.jmartin.thedevelopment.android.preferences.InfoDialog
        android:title="@string/preferences_about_title"
        android:dialogMessage="@string/preferences_about_message"
        android:dialogTitle="@string/preferences_about_title" />
</PreferenceScreen>
